# price-api

./: LICENSE  README.md  docker-compose.yml
api/: README.md  pyproject.toml
api/alembic/versions/: 0da071ff6b96_create_user_table.py  282ba99c1620_add_product_table.py  3333d9079312_create_price_items_table.py
api/app/: actions.py  config.py  main.py  models.py  schemas.py
app/: main.py
ui-web/: package-lock.json  package.json  vue.config.js
ui-web/src/: App.vue  main.js
ui-web/src/components/: ProductCard.vue  Users.vue
ui-web/src/components/partials/: Navbar.vue
ui-web/src/router/: index.js
ui-web/src/services/: api-config.js  auth-header.js  auth-service.js  product-service.js
ui-web/src/store/modules/: auth.js  index.js  product.js
ui-web/src/views/: Home.vue  Login.vue  Products.vue  Register.vue  Signup.vue
